# xm

./: Cargo.toml  README-en.md  README.md  xm.pot
.github/workflows/: release.yaml
lang/zh_CN/LC_MESSAGES/: xm.mo  xm.po
src/: config.rs  main.rs
ui/: appwindow.slint
